# demo

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
cli/: index.html
css/: termynal.css
demo/: main.py
docs/: README.md  cli.md
search/: search_index.json
