[tool.poetry]
name = "demo"
version = "0.2.0"
description = "A demo package of an application to obtain the capital of a country using a SOAP web service."
authors = []
readme = "README.md"

[tool.poetry.scripts]
demo = "demo.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
zeep = "^4.2.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
rope = "^1.7.0"
black = "^23.1.0"
pytest = "^7.2.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.0.13"


[tool.poetry.group.utils.dependencies]
ptpython = "^3.0.23"
vermin = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
